create memorystore and update handlers
